# accel-socket

./: .gitmodules  CMakeLists.txt  README.md
include/accel/: socket  socket.hpp  sockets
src/: socket.cpp
tests/: CMakeLists.txt  socket_test.cpp  sockets_test.cpp
